--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!-- your HTML goes here -->
+<title>Resume</title>
+<h1>Welcome to the resume of Nafi Uz Zaman.</h1>
+<p>As an accomplished game developer specializing in game programming<br> I am looking to
+broaden my scope of experience. I am seeking a <br>game programming position
+with the aspiration of leading a talented team as a designer<br> in the future.</p>
+
+<div>
+	<b>Accomplishments:</b>
+	<ul>
+		<li>Acquired a degree of BSc. in Computer Science from Independant University, Bangladesh</li>
+		<li>Sucessfully launched a game on Steam</li>
+	</ul>
+	<b>A picture of the one of the projects I have worked on:</b>
+	<img src="space_blaster.png">
+</div>
+
+<p><b>Link to my YouTube channel: </b><a href="http://www.youtube.com">youtube.com</a></p>
+<p><th>Game engines that I have worked on:<br></th>
+	<th>Unity<br></th>
+	<th>Unreal Engine<br></th>
+	<th>Construct 2<br></th>
+	<th>Game Maker<br></th></p>
+
+
+<button>Click this button to do absolutely nothing!</button>
