--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
 <!-- your HTML goes here -->
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>First HTML Page</title>
+</head>
+
+<body>
+  <h2>Resume of Shairil Hossain Tusher</h2>
+  <p>
+    <i> Educational Info</i>:<br>
+    <i> Major : Computer Science </i><br>
+    <i> Minor : Marketing </i>
+    <i> Independent university, Bangladesh</i><br>
+    <img src= “C:\Users\cis101.SECS\Desktop\HTML-CSS-Resume\1st.Png style="width:100px, length:100px"/>
+    <iframe src="http://www.google.com”>
+
+  
+</body>
+
+</html>
