--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <title>Resume</title>
+  <link rel="stylesheet" href="style.css">
 <h1>Welcome to the resume of Nafi Uz Zaman.</h1>
-<p>As an accomplished game developer specializing in game programming<br> I am looking to
+<p id="foo">As an accomplished game developer specializing in game programming<br> I am looking to
 broaden my scope of experience. I am seeking a <br>game programming position
 with the aspiration of leading a talented team as a designer<br> in the future.</p>
+
 
 <div>
 	<b>Accomplishments:</b>
@@ -20,6 +22,9 @@ with the aspiration of leading a talented team as a designer<br> in the future.<
 	<th>Unreal Engine<br></th>
 	<th>Construct 2<br></th>
 	<th>Game Maker<br></th></p>
+
+
+<h2>This text is the color green!</h2>
 
 
 <button>Click this button to do absolutely nothing!</button>
