--- a/index.html
+++ b/index.html
@@ -1,30 +1,67 @@
-<title>Resume</title>
-  <link rel="stylesheet" href="style.css">
-<h1>Welcome to the resume of Nafi Uz Zaman.</h1>
-<p id="foo">As an accomplished game developer specializing in game programming<br> I am looking to
-broaden my scope of experience. I am seeking a <br>game programming position
-with the aspiration of leading a talented team as a designer<br> in the future.</p>
+<!doctype html>
+<html>
+<link rel = "stylesheet" href="style.css">
+<head>
 
+	<title> Resume </title>
 
-<div>
-	<b>Accomplishments:</b>
+</head>
+<body>
+	<h1> Welcome Resume of Shairil Hossain Tusher</h1>
+	<h2> Image </h2>
+		<p> <img src= "D:\image.JPG" width="200" height="200"> </p>
 	<ul>
-		<li>Acquired a degree of BSc. in Computer Science from Independant University, Bangladesh</li>
-		<li>Sucessfully launched a game on Steam</li>
+		<li> Education </li>
+		<ol>
+			<li> Undergrad: </li>
+			  	<p>&nbsp&nbsp Major: Computer Sicence </p>
+			   	<p>&nbsp&nbsp Minor: Marketing </p>
+			   	<p>&nbsp&nbsp Independent University, Bangladesh </p>
+			<li> H.S.C: </li>
+				<p>&nbsp&nbsp Board: Dhaka </p>
+				<p>&nbsp&nbsp Year: 2012 </p>
+				<p>&nbsp&nbsp G.P.A: 5.00 Our of 5.00 </p>
+				<p>&nbsp&nbsp Institution: Rajuk Uttara Model College </p>
+			<li> S.S.C: </li>
+				<p>&nbsp&nbsp Board: Dhaka </p>
+				<p>&nbsp&nbsp Year: 2010 </p>
+				<p>&nbsp&nbsp G.P.A: 5.00 Our of 5.00 </p>
+				<p>&nbsp&nbsp Institution: Rajuk Uttara Model College </p>
+		</ol>	
+		<li> Experience: </li>
+		<ol>
+			<li> Efficiency In Programming languages: </li>
+				<p>&nbsp&nbsp Out of five star :- </p>					
+			  	<p>&nbsp&nbsp C/C++         (*****) </p>
+			   	<p>&nbsp&nbsp Java          (**** ) </p>
+				<p>&nbsp&nbsp Arduino       (*** ) </p>
+				<p>&nbsp&nbsp Visual Stduio (*** ) </p>
+				<p>&nbsp&nbsp Python        (** ) </p>
+			<li> Programming contest team member</li>
+			<li> Project: </li>
+				<ul>
+					<li> Fire Extinguisher robot for MIST </li>
+					<li> Fire Extinguisher robot for MIST </li>
+				</ul>
+		</ol>
+		<li> Contact Info: </li>
+		<ul>
+			<li> Email: Shairil3795@gmail.com</li>
+			<li> Linkedin:<p> <a href="https://www.linkedin.com/feed/"> Linkedin Profile of Shairil Hossain Tusher </a> </p>
+		</ul>
 	</ul>
-	<b>A picture of the one of the projects I have worked on:</b>
-	<img src="space_blaster.png">
-</div>
-
-<p><b>Link to my YouTube channel: </b><a href="http://www.youtube.com">youtube.com</a></p>
-<p><th>Game engines that I have worked on:<br></th>
-	<th>Unity<br></th>
-	<th>Unreal Engine<br></th>
-	<th>Construct 2<br></th>
-	<th>Game Maker<br></th></p>
+	
+	<p>Do you want to proceed ?</p>
+	<from action="" method="">
+	Yes:
+	<input type="radio" name="yesORno" value=""> </br>
+	NO:
+	<input type="radio" name="yesORno" value="">
+</body>
 
 
-<h2>This text is the color green!</h2>
 
 
-<button>Click this button to do absolutely nothing!</button>
+
+
+</html>
